# multicall-query

./: Cargo.toml  README.md
fixtures/: uniswap_v2_pairs_sample.txt
src/: abi.rs  args.rs  config.rs  lib.rs  main.rs  state.rs  utils.rs
src/state/: args.rs  config.rs  export_format.rs
