[package]
name = "multicall-query"
version = "0.1.0"
edition = "2021"
description = "CLI utility for building ethereum-based multicall operations and export ability."
authors = ["b3zrazli4n0"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
ethers = { git = "https://github.com/gakonst/ethers-rs" }
clap = { version = "4.0.18", features = ["derive"] }
anyhow = "1.0.66"